UnifyNetSDK/haikang/hk_playsdk_wrapper.py


# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 456
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetNextKeyFramePos", "cdecl"):
    PlayM4_GetNextKeyFramePos = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetNextKeyFramePos", "cdecl")
    PlayM4_GetNextKeyFramePos.argtypes = [LONG, DWORD, DWORD, PFRAME_POS]
    PlayM4_GetNextKeyFramePos.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 457
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_Play", "cdecl"):
    PlayM4_Play = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_Play", "cdecl")
    PlayM4_Play.argtypes = [LONG, HWND]
    PlayM4_Play.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 458
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_Stop", "cdecl"):
    PlayM4_Stop = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_Stop", "cdecl")
    PlayM4_Stop.argtypes = [LONG]
    PlayM4_Stop.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 459
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_Pause", "cdecl"):
    PlayM4_Pause = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_Pause", "cdecl")
    PlayM4_Pause.argtypes = [LONG, DWORD]
    PlayM4_Pause.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 460
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_Fast", "cdecl"):
    PlayM4_Fast = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_Fast", "cdecl")
    PlayM4_Fast.argtypes = [LONG]
    PlayM4_Fast.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 461
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_Slow", "cdecl"):
    PlayM4_Slow = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_Slow", "cdecl")
    PlayM4_Slow.argtypes = [LONG]
    PlayM4_Slow.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 462
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_OneByOne", "cdecl"):
    PlayM4_OneByOne = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_OneByOne", "cdecl")
    PlayM4_OneByOne.argtypes = [LONG]
    PlayM4_OneByOne.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 463
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_OneByOneBack", "cdecl"):
    PlayM4_OneByOneBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_OneByOneBack", "cdecl")
    PlayM4_OneByOneBack.argtypes = [LONG]
    PlayM4_OneByOneBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 464
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ReversePlay", "cdecl"):
    PlayM4_ReversePlay = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ReversePlay", "cdecl")
    PlayM4_ReversePlay.argtypes = [LONG]
    PlayM4_ReversePlay.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 465
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RefreshPlay", "cdecl"):
    PlayM4_RefreshPlay = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RefreshPlay", "cdecl")
    PlayM4_RefreshPlay.argtypes = [LONG]
    PlayM4_RefreshPlay.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 466
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_RefreshPlayEx", "cdecl"):
    PlayM4_RefreshPlayEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_RefreshPlayEx", "cdecl")
    PlayM4_RefreshPlayEx.argtypes = [LONG, DWORD]
    PlayM4_RefreshPlayEx.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 467
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_PlaySound", "cdecl"):
    PlayM4_PlaySound = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_PlaySound", "cdecl")
    PlayM4_PlaySound.argtypes = [LONG]
    PlayM4_PlaySound.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 468
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_StopSound", "cdecl"):
    PlayM4_StopSound = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_StopSound", "cdecl")
    PlayM4_StopSound.argtypes = []
    PlayM4_StopSound.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 469
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_PlaySoundShare", "cdecl"):
    PlayM4_PlaySoundShare = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_PlaySoundShare", "cdecl")
    PlayM4_PlaySoundShare.argtypes = [LONG]
    PlayM4_PlaySoundShare.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 470
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_StopSoundShare", "cdecl"):
    PlayM4_StopSoundShare = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_StopSoundShare", "cdecl")
    PlayM4_StopSoundShare.argtypes = [LONG]
    PlayM4_StopSoundShare.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 471
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetVolume", "cdecl"):
    PlayM4_SetVolume = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetVolume", "cdecl")
    PlayM4_SetVolume.argtypes = [LONG, WORD]
    PlayM4_SetVolume.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 472
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetVolume", "cdecl"):
    PlayM4_GetVolume = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetVolume", "cdecl")
    PlayM4_GetVolume.argtypes = [LONG]
    PlayM4_GetVolume.restype = WORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 473
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_AdjustWaveAudio", "cdecl"):
    PlayM4_AdjustWaveAudio = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_AdjustWaveAudio", "cdecl")
    PlayM4_AdjustWaveAudio.argtypes = [LONG, LONG]
    PlayM4_AdjustWaveAudio.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 474
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetANRParam", "cdecl"):
    PlayM4_SetANRParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetANRParam", "cdecl")
    PlayM4_SetANRParam.argtypes = [LONG, BOOL, c_int]
    PlayM4_SetANRParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 475
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetPlayPos", "cdecl"):
    PlayM4_SetPlayPos = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetPlayPos", "cdecl")
    PlayM4_SetPlayPos.argtypes = [LONG, c_float]
    PlayM4_SetPlayPos.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 476
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetPlayPos", "cdecl"):
    PlayM4_GetPlayPos = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetPlayPos", "cdecl")
    PlayM4_GetPlayPos.argtypes = [LONG]
    PlayM4_GetPlayPos.restype = c_float

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 477
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetFileTime", "cdecl"):
    PlayM4_GetFileTime = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetFileTime", "cdecl")
    PlayM4_GetFileTime.argtypes = [LONG]
    PlayM4_GetFileTime.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 478
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetPlayedTime", "cdecl"):
    PlayM4_GetPlayedTime = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetPlayedTime", "cdecl")
    PlayM4_GetPlayedTime.argtypes = [LONG]
    PlayM4_GetPlayedTime.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 479
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetPlayedFrames", "cdecl"):
    PlayM4_GetPlayedFrames = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetPlayedFrames", "cdecl")
    PlayM4_GetPlayedFrames.argtypes = [LONG]
    PlayM4_GetPlayedFrames.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 480
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetFileTotalFrames", "cdecl"):
    PlayM4_GetFileTotalFrames = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetFileTotalFrames", "cdecl")
    PlayM4_GetFileTotalFrames.argtypes = [LONG]
    PlayM4_GetFileTotalFrames.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 481
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetCurrentFrameRate", "cdecl"):
    PlayM4_GetCurrentFrameRate = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetCurrentFrameRate", "cdecl")
    PlayM4_GetCurrentFrameRate.argtypes = [LONG]
    PlayM4_GetCurrentFrameRate.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 482
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetPlayedTimeEx", "cdecl"):
    PlayM4_GetPlayedTimeEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetPlayedTimeEx", "cdecl")
    PlayM4_GetPlayedTimeEx.argtypes = [LONG]
    PlayM4_GetPlayedTimeEx.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 483
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetPlayedTimeEx", "cdecl"):
    PlayM4_SetPlayedTimeEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetPlayedTimeEx", "cdecl")
    PlayM4_SetPlayedTimeEx.argtypes = [LONG, DWORD]
    PlayM4_SetPlayedTimeEx.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 484
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetCurrentFrameNum", "cdecl"):
    PlayM4_GetCurrentFrameNum = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetCurrentFrameNum", "cdecl")
    PlayM4_GetCurrentFrameNum.argtypes = [LONG]
    PlayM4_GetCurrentFrameNum.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 485
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetCurrentFrameNum", "cdecl"):
    PlayM4_SetCurrentFrameNum = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetCurrentFrameNum", "cdecl")
    PlayM4_SetCurrentFrameNum.argtypes = [LONG, DWORD]
    PlayM4_SetCurrentFrameNum.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 486
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetSystemTime", "cdecl"):
    PlayM4_GetSystemTime = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetSystemTime", "cdecl")
    PlayM4_GetSystemTime.argtypes = [LONG, POINTER(PLAYM4_SYSTEM_TIME)]
    PlayM4_GetSystemTime.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 487
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetSpecialData", "cdecl"):
    PlayM4_GetSpecialData = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetSpecialData", "cdecl")
    PlayM4_GetSpecialData.argtypes = [LONG]
    PlayM4_GetSpecialData.restype = DWORD
